Fix font and spacing issue

--- a/src/styles/BlogSection.css
+++ b/src/styles/BlogSection.css
@@ -1,5 +1,5 @@
 .blog-description {
-  padding: 6rem;
+  padding: 4rem;
   padding-bottom: 0rem;
   font-size: 1.3rem;
   text-align: left;
