--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,3 +2,13 @@ p,
 .btn {
   font-family: "Montserrat", sans-serif;
 }
+
+p {
+  font-size: 1.15rem;
+}
+
+@media screen and (max-width: 414px) {
+  h1 {
+    font-size: 2rem;
+  }
+}
